@@ -447,7 +447,6 @@ readonly -f check_prog check_prog_req __check_function __check_unstable __versio
 #	__gpg_verify FILENAME FILE_DESCRIPTION [SIGFILE_EXTENSION]
 #	__mirror_fetch MIRROR_URI
 #	__mkdirs
-#	__oldpatch OLDPATCH_VERSION
 #	__src_fetch
 #	__src_prep
 #
@@ -720,23 +719,6 @@ cygpatch() {
 	done
 }
 
-# FIXME: deprecated
-__oldpatch() {
-	local _oldver=${1};
-
-	cd ${S};
-
-	if [ -e ${top}/${PN}-${_oldver}.src.patch -o -e ${top}/${PN}-${_oldver}.cygwin.patch ]
-	then
-		cygpatch ${top}/${PN}-${_oldver}.cygwin.patch ${top}/${PN}-${_oldver}.src.patch;
-	elif [ -e ${top}/${PN}-${_oldver}.patch ]
-	then
-		cygpatch ${top}/${PN}-${_oldver}.patch;
-	else
-		error "Patches for version ${_oldver} not found";
-	fi
-}
-
 __src_prep() {
 	local sigext;
 	local sig_exts="asc sig sign";
@@ -851,7 +833,7 @@ __src_prep() {
 }
 
 # protect functions
-readonly -f fetch __mirror_fetch __src_fetch unpack __gpg_verify __mkdirs cygpatch __oldpatch __src_prep
+readonly -f fetch __mirror_fetch __src_fetch unpack __gpg_verify __mkdirs cygpatch __src_prep
 
 
 ################################################################################
@@ -2112,10 +2094,6 @@ do
 			__src_prep;
 			_status=$?;
 			;;
-		oldpatch)
-			__oldpatch ${argv[$((++arg_n))]};
-			_status=$?;
-			;;
 		compile|build|make)
 			__stage Compiling;
 			src_compile 2>&1 | tee ${compilelog};
@@ -2182,9 +2160,6 @@ do
 		version)
 			__show_version;
 			exit 0;
-			;;
-		conf*|dist|spkg|src-package)
-			# deprecated commands
 			;;
 		*)
 			error "unknown command ${argv[${arg_n}]}";
